@@ -40,7 +40,6 @@ import org.bukkit.event.player.PlayerKickEvent;
 import org.bukkit.event.player.PlayerPortalEvent;
 import org.bukkit.event.player.PlayerQuitEvent;
 import org.bukkit.event.player.PlayerRespawnEvent;
-import org.bukkit.event.player.PlayerTeleportEvent;
 import org.bukkit.event.server.PluginDisableEvent;
 import org.bukkit.event.server.PluginEnableEvent;
 import org.bukkit.permissions.Permission;
@@ -361,7 +360,7 @@ public class BukkitPermissions {
 		}
 		
 		@EventHandler(priority = EventPriority.LOWEST)
-		public void onPlayerChangeWorld(PlayerChangedWorldEvent event) { // will portal into another world
+		public void onPlayerChangeWorld(PlayerChangedWorldEvent event) { // has changed worlds
 			updatePermissions(event.getPlayer(), event.getPlayer().getWorld().getName());
 		}
 
@@ -375,13 +374,6 @@ public class BukkitPermissions {
 		@EventHandler(priority = EventPriority.LOWEST)
 		public void onPlayerRespawn(PlayerRespawnEvent event) { // can be respawned in another world
 			updatePermissions(event.getPlayer(), event.getRespawnLocation().getWorld().getName());
-		}
-
-		@EventHandler(priority = EventPriority.LOWEST)
-		public void onPlayerTeleport(PlayerTeleportEvent event) { // can be teleported into another world
-			if ((event.getTo() != null) && (event.getPlayer() != null) && (!event.getFrom().getWorld().equals(event.getTo().getWorld()))) { // only if world actually changed
-				updatePermissions(event.getPlayer(), event.getTo().getWorld().getName());
-			}
 		}
 
 		@EventHandler(priority = EventPriority.LOWEST)
